--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-admin-template</title>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.8&key=6977068d900f34a68bba8da11160b724"></script>
   </head>
   <body>
     <div id="app"></div>
